--- a/src/App.css
+++ b/src/App.css
@@ -36,16 +36,16 @@ body {
   padding: 10px 20px;
   z-index: 10;
   display: flex;
-  justify-content: flex-end; /* Aligns the content to the right */
+  justify-content: flex-end; 
   align-items: center;
 }
 
 .navbar.hide {
-  top: -50px;  /* Move navbar out of view when hidden */
+  top: -50px;  
 }
 
 .navbar.show {
-  top: 0; /* Show navbar */
+  top: 0;
 }
 /* Align nav-links to the right */
 .navbar .nav-links {
@@ -53,7 +53,7 @@ body {
   justify-content: center;
   gap: 30px;
   list-style: none;
-  margin-left: auto; /* Pushes the nav-links to the right */
+  margin-left: auto; 
 }
 
 /* Navbar links styling */
@@ -445,6 +445,13 @@ h2 {
 }
 .company-logo.mobiot{
   background-color: goldenrod;
+  padding: 0px;
+  padding-bottom: 15px;
+  
+}
+
+.imgsize{
+  width:  350px;
 }
 
 .company-logo.inventron{
@@ -627,7 +634,7 @@ h2 {
 }
 .languages {
   border-radius: 10px;
-  margin: 10px;
+  margin-bottom: 10px;
   color: #ddd;
   padding: 20px;
   background-color: #0d1017;
@@ -985,5 +992,25 @@ h2 {
   text-align: center;
   border-radius: 5px;
   font-size: 16px;
+}
+
+.scroll-up {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #053857;
+  color: white;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: opacity 0.3s ease-in-out;
+}
+.scroll-up:hover {
+  background-color: #555;
 }
 
