--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ body {
 }
 
 .photo {
-  width: 300px;
+  width: 330px;
   height: 300px;
   border-radius: 50%;
   border: 5px solid #3498db;
@@ -452,18 +452,18 @@ h2 {
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 20px;
-  flex-basis: 30%; /* This will allow three boxes in a row */
+  flex-basis: 30%; 
   box-sizing: border-box;
   box-shadow: 0 -8px 16px rgba(98, 98, 98, 0.3) , 0 8px 16px rgba(98, 98, 98, 0.3); 
 }
 
 .company-logo {
-  flex-basis: 30%; /* Logo takes up 30% of the space */
+  flex-basis: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: yellow; /* Set a background color */
+  background-color: yellow;
   padding: 10px;
   border-radius: 8px;
 }
@@ -490,7 +490,7 @@ h2 {
 
 
 .company-logo.mobiot img {
-  max-width: 300px;
+  max-width: 350px;
   height: auto;
   border-radius: 8px;
   padding: 60px;
@@ -534,6 +534,7 @@ h2 {
 
 .company-details h3 {
   font-size: 1.5rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin: 0;
   text-align: center;
   padding: 10px;
@@ -551,7 +552,8 @@ h2 {
 }
 
 .company-details p {
-  font-size: 1rem;
+  font-size: 1.1rem;
+  font-family: 'Times New Roman', Times, serif;
   color: #fff;
   margin: 5px 0;
   gap: 2px;
@@ -564,9 +566,10 @@ h2 {
 
 .experience-info li {
   margin-bottom: 10px;
+  font-size: 1.1rem;
   color: #ccc;
   text-align: justify;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 @media screen and (max-width: 1024px) {
@@ -720,6 +723,7 @@ h2 {
   margin-bottom: 20px;
 }
 
+
 .achi-container {
   display: flex;
   flex-wrap: wrap;
@@ -801,6 +805,7 @@ h2 {
 
 .ex-details h3 {
   font-size: 1.5rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin: 0;
   text-align: center;
   padding: 10px;
@@ -810,8 +815,9 @@ h2 {
 
 
 .ex-details p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: #fff;
+  font-family: 'Times New Roman', Times, serif;
   margin: 5px 0;
   gap: 2px;
 }
@@ -825,9 +831,27 @@ h2 {
   margin-bottom: 10px;
   color: #ccc;
   text-align: justify;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.1rem;
 }
 
+
+.thought ul{
+
+  list-style-type: none;
+  padding: 0;
+
+}
+
+.thought li{
+  margin-bottom: 20px;
+  color: #ccc;
+  text-align: justify;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.2rem;
+  text-align: center;
+
+}
 @media screen and (max-width: 1024px) {
   .achi {
     flex-basis: 48%; /* Two boxes in a row */
@@ -927,6 +951,16 @@ h2 {
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); /* Increases shadow on hover */
 }
 
+.project h3{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1.6rem;
+}
+
+.info-container ul{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.1rem;
+}
+
 .project-image {
   width: 100px;  /* Adjust size of the image */
   height: 100px;
@@ -950,7 +984,7 @@ h2 {
 
 /* General container for the contact form */
 .cont {
-  max-width: 435px;
+  max-width: 400px;
   margin: 50px auto;
   padding: 20px;
   background-color: #0d1017;
