--- a/src/App.css
+++ b/src/App.css
@@ -123,25 +123,25 @@ body {
   margin-bottom: 20px;
 }
 
-h1 {
+.content h1 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 2.5em;
 }
 
-h3 {
+.content h3 {
   font-family: 'Times New Roman', Times, serif;
   font-size: 1.5em;
   margin: 20px;
 }
 
-/* Increase font size for screens 480px and above */
+
 @media (max-width: 480px) {
-  h1 {
+  .content h1 {
     font-size: 4em;
   }
 
-  h3 {
-    font-size: 2px;
+  .content h3 {
+    font-size: 2em;
     margin: 30px;
   }
 }
@@ -190,7 +190,7 @@ h3 {
 @media (max-width: 480px) {
   .button {
     font-size: x-large;
-    padding: 18px; /* Optional: Adjust padding for better touch usability */
+    padding: 18px; 
   }
 }
 .button:hover {
@@ -490,7 +490,7 @@ h2 {
 
 
 .company-logo.mobiot img {
-  max-width: 350px;
+  max-width: 300px;
   height: auto;
   border-radius: 8px;
   padding: 60px;
@@ -520,11 +520,11 @@ h2 {
   width: 100%;
   height: 1px;
   background-color: #ccc;
-  margin-top: 10px; /* Space between logo and separator */
+  margin-top: 10px;
 }
 
 .experience-details {
-  flex-basis: 70%; /* Remaining 70% for company details and experience info */
+  flex-basis: 70%;
   padding: 5px;
 }
 
