--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,7 @@ body {
 .content h1 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 2.5em;
+  margin: 20px;
 }
 
 .content h3 {
@@ -138,6 +139,7 @@ body {
 @media (max-width: 480px) {
   .content h1 {
     font-size: 2em;
+    
   }
 
   .content h3 {
